<resources>
    <string name="app_name">ConstructionProjectAssistant</string>
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="addproj"> Add Project+</string>
    <string name="UserName">Username</string>
    <string name="DOB">Date of Birth</string>
    <string name="new_customer">New Customer</string>
    <string name="EmailAddress">Email Address</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="Password">Password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="spinnersetup">Salary(monthly)</string>
    <string name="recurringbills">Recurring Bills</string>
    <string name="recurring_bills_add">Add bills </string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered to CPA now!</string>
    <string name="btn_link_to_login">Already registered. Log Me in!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="addproject">Add Project</string>
    <string name="prompt_password">Enter Password</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="test">testing</string>
</resources>
