<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView2"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/UserName"
        android:inputType="textPersonName"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/firstname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/username"
        android:layout_below="@+id/username"
        android:layout_marginTop="21dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/FirstName"
        android:inputType="textPersonName"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/firstname"
        android:layout_below="@+id/firstname"
        android:layout_marginTop="21dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/LastName"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/lastname"
        android:layout_below="@+id/lastname"
        android:layout_marginTop="21dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/EmailAddress"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/dateofbirth"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/emailaddress"
        android:layout_below="@+id/emailaddress"
        android:layout_marginTop="21dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/DOB"
        android:inputType="date" />


    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/dateofbirth"
        android:layout_below="@+id/dateofbirth"
        android:layout_marginTop="21dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/password"
        android:layout_below="@+id/password"
        android:background="#11000000"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/confirmpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Submit"
                android:textColor="#fff"
                android:textSize="24sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Already Have an Account?"
        android:textSize="18sp" />
</RelativeLayout>